--- a/ui pages/BackUps/Material.html
+++ b/ui pages/BackUps/Material.html
@@ -197,6 +197,7 @@
     .compact .form-control-feedback {
       line-height: 25px;
     }
+
   </style>
   <div id="engage" ng-app="xm.engage-xm" class="container-fluid" ng-cloak="">
     <div ng-controller="engageCtlr">
@@ -235,6 +236,19 @@
           </div>
 
           <div class="row">
+
+              <div class="form-group col-md-12">
+                <md-input-container class="md-block">
+                  <label class="xm-label">Type</label>
+                  <md-select ng-model="notification_type">
+                  <md-option ng-repeat="type in notification_types" value="{{type.value}}">{{ type.label | translate }}</md-option>
+                  </md-select>
+                </md-input-container>
+              </div>
+
+
+
+            <!--
             <div ng-class="engageXMForm.notification_type.$error.required ? 'is-required' : 'is-filled'">
               <div ng-class="displayDateTime(notification_type) ? 'form-group col-sm-4' : 'form-group col-sm-12'">
                 <span class="required-marker"></span>
@@ -247,13 +261,18 @@
                   <div ng-message="required">{{ 'ENGAGE_XM.ERROR.REQUIRED' | translate }}</div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <div class="form-group col-sm-4" id="date_time_div" ng-if="displayDateTime(notification_type)">
               <label class="xm-label">Date</label>
 
               <p class="input-group">
-                <input type="text" class="form-control" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="meeting_datetime" is-open="calendarPopup.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+                <!-- <md-datepicker ng-model="meeting_datetime" aria-label="Enter date"></md-datepicker> -->
+                <md-input-container>
+                  <label>Enter date</label>
+                  <md-datepicker ng-model="meeting_datetime" aria-label="Enter date"></md-datepicker>
+                </md-input-container>
+                <!-- <input type="text" class="form-control" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="meeting_datetime" is-open="calendarPopup.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" /> -->
                 <span class="input-group-btn">
                   <button type="button" class="btn btn-default" ng-click="openCalendarPopup()"><i class="glyphicon glyphicon-calendar"></i></button>
                 </span>
@@ -266,9 +285,8 @@
           </div>
 
           <div class="row">
-            <div class="form-group col-sm-12">
+            <!-- <div class="form-group col-sm-12">
               <label class="xm-label">{{ 'ENGAGE_XM.LABEL.CONFERENCE_BRIDGE' | translate }}</label>
-              <!-- Insert below if desired to create multi-select multiple="multiple" -->
               <select class="form-control" ng-model="conference_bridge" id="engage_conf_select">
                 <option value="None" class="conf-engage-none">{{ 'ENGAGE_XM.OPTIONS.CONFERENCE_BRIDGE.None' | translate }}</option>
                 <optgroup label="{{ 'ENGAGE_XM.OPTIONS.CONFERENCE_BRIDGE.Hosted_Category' | translate }}" ng-if="displayXMConfBridge()">
@@ -278,7 +296,9 @@
                   <option ng-repeat="bridgeOpt in external_conference_bridge_options" value="{{bridgeOpt.value}}" id="conf_engage_external" class="conf_engage_external">{{ bridgeOpt.label | translate }}</option>
                 </optgroup>
               </select>
-            </div>
+            </div> -->
+
+
           </div>
           <div class="row">
             <div class="form-group col-sm-3" id='passcode_div' ng-if="isExternalConferenceBridge(conference_bridge)">
@@ -298,36 +318,56 @@
           </div>
 
           <div class="row">
+            <div class="form-group col-md-12">
+              <md-input-container class="md-block">
+                <label class="xm-label">Communication</label>
+                <md-select ng-model="someVal" multiple="multiple" id="someVal">
+                  <md-optgroup label="Conference Bridge">
+                    <md-option value="WebEx">WebEx</md-option>
+                    <md-option value="MeetingRoom">Personal Meeting Room (WebEx)</md-option>
+                  </md-optgroup>
+                  <md-optgroup label="Chat">
+                    <md-option value="Slack">Slack</md-option>
+                    <md-option value="Teams">MS Teams</md-option>
+                  </md-optgroup>
+                </md-select>
+              </md-input-container>
+            </div>
+          </div>
+
+          <div class="row">
             <div class="form-group col-md-12" ng-class="engageXMForm.message.$error">
-              <label class="xm-label">{{ 'ENGAGE_XM.LABEL.MESSAGE' | translate }}</label>
-              <textarea class="form-control" value="{{message}}" ng-model="message" id="message" name="message" ng-maxlength="2000" />
+              <md-input-container class="md-block">
+                <label class="xm-label">Message</label>
+                <textarea ng-model="message" md-maxlength="2000" md-select-on-focus="" md-no-autogrow="false"></textarea>
+              </md-input-container>
               <div class="xm-error" ng-messages="engageXMForm.message.$error" ng-show="engageXMForm.$submitted">
-						<div ng-message="maxlength">{{ 'ENGAGE_XM.ERROR.MAX_LENGTH' | translate:'{ max_length: 2000 }' }}</div>
-					</div>
-				<div>
-          <p class="xm-legal-label" ng-bind-html="displayLegalStatement()"></p>
-				</div>
-				</div>
-			</div>
+                <div ng-message="maxlength">{{ 'ENGAGE_XM.ERROR.MAX_LENGTH' | translate:'{ max_length: 2000 }' }}</div>
+              </div>
+              <div>
+                <p class="xm-legal-label" ng-bind-html="displayLegalStatement()"></p>
+              </div>
+            </div>
+      </div>
 
-			<div class="row">
-				<div class="col-md-4">
-					<button class="btn btn-default xm-btn-default" ng-click="submit()">{{ 'ENGAGE_XM.BUTTON.SUBMIT' | translate }}</button>
-					<button class="btn btn-default xm-btn-default xm-cancel-button" type="button" ng-click="cancel()">{{ 'ENGAGE_XM.BUTTON.CANCEL' | translate }}</button>
-				</div>
-			</div>
+          <div class="row">
+            <div class="col-md-4">
+              <md-button class="md-raised" ng-click="submit()">{{ 'ENGAGE_XM.BUTTON.SUBMIT' | translate }}</md-button >
+              <md-button class="md-raised" type="button" ng-click="cancel()">{{ 'ENGAGE_XM.BUTTON.CANCEL' | translate }}</md-button >
+            </div>
+          </div>
 
-		</form>
-		</div>
-		<div class="panel" ng-if="is_finished">
-			<h4 class="xm-header">{{ 'ENGAGE_XM.TITLE' | translate }}</h4>
-			<div class="row">
-				<div class="col-md-8 xm-success-message">
-					<p>{{ 'ENGAGE_XM.MESSAGE.SUCCESS' | translate }}</p>
-				</div>
-			</div>
-			<a href="{{engage_url}}" target="_top" class="btn btn-default xm-btn-default">{{ 'ENGAGE_XM.BUTTON.VIEW_RECORD' | translate }}</a>
-		</div>
-	</div>
-</div>
+        </form>
+      </div>
+      <div class="panel" ng-if="is_finished">
+        <h4 class="xm-header">{{ 'ENGAGE_XM.TITLE' | translate }}</h4>
+        <div class="row">
+          <div class="col-md-8 xm-success-message">
+            <p>{{ 'ENGAGE_XM.MESSAGE.SUCCESS' | translate }}</p>
+          </div>
+        </div>
+        <a href="{{engage_url}}" target="_top" class="btn btn-default xm-btn-default">{{ 'ENGAGE_XM.BUTTON.VIEW_RECORD' | translate }}</a>
+      </div>
+    </div>
+  </div>
 </j:jelly>
