--- a/ui pages/BackUps/Material.html
+++ b/ui pages/BackUps/Material.html
@@ -198,6 +198,8 @@
       line-height: 25px;
     }
 
+    .tight {border-style: none;}
+
   </style>
   <div id="engage" ng-app="xm.engage-xm" class="container-fluid" ng-cloak="">
     <div ng-controller="engageCtlr">
@@ -246,7 +248,7 @@
                 </md-input-container>
               </div>
 
-
+  </div>
 
             <!--
             <div ng-class="engageXMForm.notification_type.$error.required ? 'is-required' : 'is-filled'">
@@ -263,16 +265,13 @@
               </div>
             </div> -->
 
-            <div class="form-group col-sm-4" id="date_time_div" ng-if="displayDateTime(notification_type)">
+            <!-- <div class="form-group col-sm-4" id="date_time_div" ng-if="displayDateTime(notification_type)">
               <label class="xm-label">Date</label>
-
               <p class="input-group">
-                <!-- <md-datepicker ng-model="meeting_datetime" aria-label="Enter date"></md-datepicker> -->
                 <md-input-container>
                   <label>Enter date</label>
                   <md-datepicker ng-model="meeting_datetime" aria-label="Enter date"></md-datepicker>
                 </md-input-container>
-                <!-- <input type="text" class="form-control" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="meeting_datetime" is-open="calendarPopup.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" /> -->
                 <span class="input-group-btn">
                   <button type="button" class="btn btn-default" ng-click="openCalendarPopup()"><i class="glyphicon glyphicon-calendar"></i></button>
                 </span>
@@ -282,9 +281,16 @@
               <label class="xm-label">Time</label>
               <uib-timepicker ng-model="meeting_datetime" ng-change="changed()" show-spinners="false"></uib-timepicker>
             </div>
-          </div>
+        -->
+
 
           <div class="row">
+            <md-input-container>
+              <label>Enter date</label>
+              <md-datepicker ng-model="meeting_datetime" md-placeholder="Enter date"></md-datepicker>
+
+              <!-- <md-datepicker ng-model="user.submissionDate" aria-label="Enter date"></md-datepicker> -->
+            </md-input-container>
             <!-- <div class="form-group col-sm-12">
               <label class="xm-label">{{ 'ENGAGE_XM.LABEL.CONFERENCE_BRIDGE' | translate }}</label>
               <select class="form-control" ng-model="conference_bridge" id="engage_conf_select">
