--- a/ServiceNow Components/ui pages/xm_engage_workflow_with_xmatters_content.html
+++ b/ServiceNow Components/ui pages/xm_engage_workflow_with_xmatters_content.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <j:jelly xmlns:j="jelly:core" xmlns:g="glide" xmlns:j2="null" xmlns:g2="null" trim="false">
 
-  <!-- The following UI Scripts must be called in the order as they appear below -->
+  <!-- The following UI Scripts must be called in the order as they appear below-->
 
   <!-- UI Scripts dependent on the xMatters application -->
   <script src="x_xma_xmatters.angular.min.jsdbx"></script>
@@ -198,7 +198,7 @@
       line-height: 25px;
     }
   </style>
-  <div id="engage" ng-app="xm.engage-xm" class="container-fluid" ng-cloak="">
+  <div id="engage" ng-app="xm.engage-xm" class="container-fluid" ng-cloak="" >
     <div ng-controller="engageCtlr">
       <div class="panel" ng-show="!is_finished">
         <h4 class="xm-header">{{ 'ENGAGE_XM.TITLE' | translate }}</h4>
@@ -239,9 +239,9 @@
               <div ng-class="displayDateTime(type) ? 'form-group col-sm-4' : 'form-group col-sm-12'">
                 <span class="required-marker"></span>
                 <label class="xm-label">{{ 'ENGAGE_XM.LABEL.TYPE' | translate }}</label>
-                <select class="form-control" id="notification-type" ng-model="type" name="type" required="required">
-                  <option value="">{{ 'ENGAGE_XM.OPTIONS.CONFERENCE_BRIDGE.None' | translate }}</option>
-                  <option ng-repeat="type in notification_types" value="{{type.value}}">{{ type.label | translate }}</option>
+                <select class="form-control" id="type" ng-model="type" name="type" required="required">
+                  <option value="">{{ 'ENGAGE_XM.OPTIONS.TYPE.None' | translate }}</option>
+                  <option ng-repeat="type in notification_types()" value="{{type}}">{{ type | translate }}</option>
                 </select>
                 <div class="xm-error" ng-messages="engageXMForm.type.$error" ng-show="engageXMForm.$submitted">
                   <div ng-message="required">{{ 'ENGAGE_XM.ERROR.REQUIRED' | translate }}</div>
@@ -252,12 +252,12 @@
             <div class="form-group col-sm-4" id="date_time_div" ng-if="displayDateTime(type)">
               <label class="xm-label">{{ 'ENGAGE_XM.LABEL.TIME' | translate }}</label>
 
-              <p class="input-group">
+              <div class="input-group">
                 <input type="text" class="form-control" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="date_time.value" is-open="calendarPopup.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
                 <span class="input-group-btn">
                   <button type="button" class="btn btn-default" ng-click="openCalendarPopup()"><i class="glyphicon glyphicon-calendar"></i></button>
                 </span>
-              </p>
+              </div>
             </div>
             <div class="form-group col-sm-4" id="date_time_div" ng-if="displayDateTime(type)">
               <label class="xm-label">{{ 'ENGAGE_XM.LABEL.DATE' | translate }}</label>
@@ -268,14 +268,13 @@
           <div class="row">
             <div class="form-group col-sm-12">
               <label class="xm-label">{{ 'ENGAGE_XM.LABEL.CONFERENCE_BRIDGE' | translate }}</label>
-
               <select class="form-control" ng-model="conference_bridge" id="engage_conf_select" ng-change="updateMeetingFields(conference_bridge)">
                 <option value="None" class="conf-engage-none">{{ 'ENGAGE_XM.OPTIONS.CONFERENCE_BRIDGE.None' | translate }}</option>
                 <optgroup label="{{ 'ENGAGE_XM.OPTIONS.CONFERENCE_BRIDGE.Hosted_Category' | translate }}" ng-if="displayXMConfBridge()">
                   <option ng-repeat="bridgeOpt in hosted_conference_bridge_options" value="{{bridgeOpt.value}}" class="conf-engage-xm-hosted">{{ bridgeOpt.label | translate }}</option>
                 </optgroup>
-                <optgroup label="{{ 'ENGAGE_XM.OPTIONS.CONFERENCE_BRIDGE.External_Category' | translate }}" ng-if="external_conference_bridge_options.length > 0">
-                  <option ng-repeat="bridgeOpt in external_conference_bridge_options" value="{{bridgeOpt.value}}" id="conf_engage_external" class="conf_engage_external">{{ bridgeOpt.label | translate }}</option>
+                <optgroup label="{{ 'ENGAGE_XM.OPTIONS.CONFERENCE_BRIDGE.External_Category' | translate }}" ng-if="external_conference_bridge_options().length > 0">
+                  <option ng-repeat="bridgeOpt in external_conference_bridge_options()" value="{{bridgeOpt}}" id="conf_engage_external" class="conf_engage_external">{{ bridgeOpt | translate }}</option>
                 </optgroup>
               </select>
             </div>
@@ -284,7 +283,7 @@
             <div class="form-group col-sm-3" id='passcode_div'>
               <span class="required-marker"></span>
               <label class="xm-label">{{ 'ENGAGE_XM.LABEL.PASSCODE' | translate }}</label>
-              <input type="text" class="form-control" ng-model="passcode.value" id="passcode" name="passcode" ng-maxlength="25"/>
+              <input type="text" class="form-control" ng-model="passcode.value" id="passcode" name="passcode" ng-maxlength="25" />
               <div class="xm-error" ng-messages="engageXMForm.passcode.$error" ng-show="engageXMForm.$submitted">
                 <div ng-message="required">{{ 'ENGAGE_XM.ERROR.REQUIRED' | translate }}</div>
                 <div ng-message="maxlength">{{ 'ENGAGE_XM.ERROR.MAX_LENGTH' | translate:'{ max_length: 25 }' }}</div>
@@ -292,7 +291,7 @@
             </div>
             <div class="form-group col-sm-9">
               <label class="xm-label">{{ 'ENGAGE_XM.LABEL.MEETING_LINK' | translate }}</label>
-              <input type="text" class="form-control" ng-model="meeting_link.value" id="meeting_link" name="meeting_link" ng-maxlength="2000"/>
+              <input type="text" class="form-control" ng-model="meeting_link.value" id="meeting_link" name="meeting_link" ng-maxlength="2000" />
             </div>
           </div>
 
